Refactor the rest of public API
